cmake_minimum_required(VERSION 3.27)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode main.cpp
        Solution135.cpp
        Solution135.h
        Solution42.cpp
        Solution42.h
        Solution13.cpp
        Solution13.h
        Solution12.cpp
        Solution12.h
        Solution58.cpp
        Solution58.h
        Solution14.cpp
        Solution14.h
        Solution151.cpp
        Solution151.h
        Solution6.cpp
        Solution6.h
        Solution28.cpp
        Solution28.h
        Solution68.cpp
        Solution68.h
        Solution125.cpp
        Solution125.h
        Solution392.cpp
        Solution392.h)
